== 0.1.0 2011-01-17

 * Subtasks are now public, and namespaced under repo: and gem:.
 * Add remove_task and replace_task, for customizing the subtasks.

== 0.0.5 2010-08-25

 * Support more than 3 version components via version.increment(n).
 * Add cucumber_task.

== 0.0.4 2010-04-26

 * Set version in CHANGELOG when bumping version.
 * Make VERSION objects comparable, and make them print nicely.

== 0.0.3 2010-04-22

 * Add install task.

== 0.0.2 2010-04-12

 * Fix push_gem task.

== 0.0.1 2010-04-12

 * Hi.